tests/negative/typecheck/addr_val.orng
// addr_val.orng:7:22: error: expected a value of type `Char`, got a value of type `Int`
//     let y: &Char = &x
//                     ^
// 
fn main() -> Int {
    let x = 0
    let y: &Char = &x
    0
}